--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -163,3 +163,12 @@ body {
    font-size: 1.2rem;
  }
 }
+
+.task{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
