--- a/frontend/src/components/taskform/task.module.css
+++ b/frontend/src/components/taskform/task.module.css
@@ -1,8 +1,10 @@
 .task{
 width: 50%;
 display: flex;
-margin: 0 auto;
+margin: 10px;
 gap: 10px;
 justify-content: center;
+align-items: center;
+flex-direction: column;
 }
 
