--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  line-height: 1.5;
+  line-height: auto;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -29,7 +29,7 @@ input,
 button,
 textarea,
 select {
-  font: inherit;
+  font: sans-serif;
 }
 
 p,
@@ -54,7 +54,7 @@ body {
 /* container */
 
 .container {
-  max-width: 1200px;
+  max-width: auto;
   margin: 0 auto;
 }
 
@@ -66,27 +66,15 @@ body {
   padding: 3rem 0 1rem;
 }
 
-.todos {
+.task{
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
-}
-
-.todo {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem 1.25rem;
-
-  background-color: rgba(255, 255, 255, 0.1);
-  width: 50%;
-  font-size: 1.4rem;
-  border-radius: 1rem;
-  transition: all 0.2s;
-
-  &:hover {
-   background-color: rgba(255, 255, 255, 0.2);
-  }
+  justify-content: start;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .mutations {
@@ -94,8 +82,8 @@ body {
   gap: 0.75rem;
 }
 
-.todo__status,
-.todo__delete {
+.task__status,
+.task__delete {
   border: none;
   padding: 0;
   line-height: 1;
@@ -110,7 +98,7 @@ body {
   }
 }
 
-.todo__status {
+.task__status {
  font-size: 1.75rem;
 }
 
@@ -118,7 +106,7 @@ body {
 /* form */
 .form {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.75rem;
   width: 50%;
   margin: 1rem auto;
 }
@@ -158,17 +146,10 @@ body {
    width: 95%;
  }
 
- .todo {
+ .task {
    width: 95%;
    font-size: 1.2rem;
+   
  }
 }
 
-.task{
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
-}
