--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,17 +45,16 @@ h6 {
 /* APP */
 
 body {
-  background-color: #07000d;
-  background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
-  color: white;
-  font-family: 'Rubik', sans-serif;
+  background-color: #2c0045;
+  background-image: url("https://www.transparenttextures.com/patterns/gplay.png");
+color: white;
 }
 
 /* container */
 
 .container {
   max-width: auto;
-  margin: 0 auto;
+  margin: auto;
 }
 
 /* todos list */
@@ -107,7 +106,7 @@ body {
 .form {
   display: flex;
   gap: 0.75rem;
-  width: 50%;
+  width: 65%;
   margin: 1rem auto;
 }
 
